test/tests/stages/18_structures/valid/no_structure_parameters/parse_and_lex/space_around_struct_member.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[39]:
  struct
  identifier(s)
  {
  int
  identifier(a)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(s)
  identifier(foo)
  ;
  identifier(foo)
  .
  identifier(a)
  =
  const int(10)
  ;
  int
  identifier(b)
  =
  identifier(foo)
  .
  identifier(a)
  ;
  return
  identifier(foo)
  .
  identifier(a)
  ==
  identifier(b)
  ;
  }
