test/tests/stages/18_structures/invalid_parse/struct_member_no_type.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[7]:
  struct
  identifier(s)
  {
  identifier(a)
  ;
  }
  ;
